fix vidoe overflow

--- a/gh-pages/src/Infrastructure/Presentation/components/youtube-modal/youtube-modal.component.scss
+++ b/gh-pages/src/Infrastructure/Presentation/components/youtube-modal/youtube-modal.component.scss
@@ -60,7 +60,8 @@
 
 .video-container {
   position: relative;
-  width: 100%;
+  left: 5%;
+  width: 80%;
   padding: 24px 32px;
 
   .youtube-iframe {
